src/test/ui/E0660.stderr
error[E0660]: malformed inline assembly
  --> $DIR/E0660.rs:17:5
   |
LL |     asm!("nop" "nop");
   |     ^^^^^^^^^^^^^^^^^^

error[E0660]: malformed inline assembly
  --> $DIR/E0660.rs:19:5
   |
LL |     asm!("nop" "nop" : "=r"(a));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0660`.
